--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
     "tailwind-merge": "^1.2.0"
   },
