--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "clsx": "^1.1.1",
     "next": "12.0.7",
+    "next-api-og-image": "^2.1.1",
     "next-seo": "^4.29.0",
     "next-themes": "^0.0.15",
     "prettier": "^2.5.1",
