--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-api-og-image": "^2.1.1",
     "next-seo": "^4.29.0",
     "prettier": "^2.5.1",
+    "query-string": "^7.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.1",
