--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yehez-nexttailwind-starter",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,7 +14,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "clsx": "^1.1.1",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "next-api-og-image": "^2.1.1",
     "next-seo": "^4.29.0",
     "prettier": "^2.5.1",
@@ -39,7 +39,7 @@
     "postcss": "^8.2.15",
     "prettier-plugin-tailwindcss": "^0.1.3",
     "standard-version": "^9.3.2",
-    "tailwindcss": "^3.0.7",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.4"
   },
   "lint-staged": {
