--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
     "typescript": "4.5.4"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix --max-warnings=0",
+      "prettier --write src/"
+    ],
+    "*.{json,css,scss,md}": [
+      "prettier --write src/"
+    ]
   }
 }
