--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yehez-nexttailwind-starter",
+  "name": "yehez-og-image",
   "private": true,
   "version": "0.0.4",
   "scripts": {
@@ -11,16 +11,14 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
     "clsx": "^1.1.1",
-    "next": "^12.1.0",
+    "next": "12.0.4",
     "next-api-og-image": "^2.1.1",
     "next-seo": "^4.29.0",
     "prettier": "^2.5.1",
     "query-string": "^7.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
     "tailwind-merge": "^1.2.0"
@@ -28,18 +26,20 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@tailwindcss/forms": "^0.5.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
-    "eslint": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "<8.0.0",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.1.4",
-    "postcss": "^8.2.15",
+    "postcss": "^8.4.13",
     "prettier-plugin-tailwindcss": "^0.1.3",
     "standard-version": "^9.3.2",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.5.4"
   },
   "lint-staged": {
