--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "next": "12.0.4",
-    "next-api-og-image": "^2.1.1",
+    "next-api-og-image": "^4.0.1",
     "next-seo": "^4.29.0",
-    "prettier": "^2.5.1",
     "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -29,14 +28,14 @@
     "@tailwindcss/forms": "^0.5.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
     "autoprefixer": "^10.4.7",
     "eslint": "<8.0.0",
-    "eslint-config-next": "12.0.7",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-config-next": "^12.1.6",
+    "eslint-config-yehezgun": "^1.2.3",
     "husky": "^7.0.0",
     "lint-staged": "^12.1.4",
     "postcss": "^8.4.13",
+    "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.3",
     "standard-version": "^9.3.2",
     "tailwindcss": "^3.0.24",
