--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "chrome-aws-lambda": "6.0.0",
     "clsx": "^1.1.1",
     "next": "12.0.4",
     "next-api-og-image": "^4.0.1",
