--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "chrome-aws-lambda": "6.0.0",
     "clsx": "^1.1.1",
-    "next": "12.0.4",
+    "next": "^12.2.2",
     "next-api-og-image": "^4.0.1",
     "next-seo": "^4.29.0",
     "query-string": "^7.1.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
     "tailwind-merge": "^1.2.0"
@@ -27,8 +27,8 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@tailwindcss/forms": "^0.5.1",
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
+    "@types/node": "^18.0.5",
+    "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
     "eslint": "<8.0.0",
     "eslint-config-next": "^12.1.6",
@@ -39,8 +39,8 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.3",
     "standard-version": "^9.3.2",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.5.4"
+    "tailwindcss": "^3.1.6",
+    "typescript": "^4.7.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
